# siphon

./: .gitignore  CLAUDE.md  LICENSE  PHASE_0.1_COMPLETE.md  README.md  ROADMAP.md  TODO.md
.claude/commands/: ops.md
.claude/rules/: csharp-core.md  python-vision.md
notebooks/: 01_analytical_baseline.ipynb  02_sensitivity_maps.ipynb  03_yield_analysis.ipynb
python/: pyproject.toml
python/siphon/: __init__.py  ring.py  sensitivity.py  thermal.py  variability.py
python/siphon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/tests/: __init__.py  test_ring.py  test_sensitivity.py  test_thermal.py  test_variability.py
scripts/: run_analytical.py  run_variability.py
